--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
         </div>
         <div>
           <label for="email">Email:</label>
-          <input type="text" id="email" />
+          <input type="email" id="email" />
+        </div>
+        <div>
+          <label for="phone">Phone:</label>
+          <input type="tel" id="phone" />
         </div>
         <input class="btn" type="submit" value="Submit" />
-        <input
+        <!-- <input
           class="btn"
           id="printBtn"
           type="button"
           value="Console Log User Detail"
-        />
+        /> -->
       </form>
 
       <ul id="users"></ul>
